--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src=""></script>
 <!--- Code above this line will not be displayed on the browser --> 
 <body>
-My name is Jueyan Lin
-Hello world! </p>
+<p>Hello world! </p>
+<p>My name is Jueyan Lin </p>
 </body>
 </html>
