--- a/home page.html
+++ b/home page.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<head> 
+
 <title>Home Page</title>
 
 	<!--- Information you don't want to display to users --> 
 
-</head>
+
 
 	<body style="background-color:#FFA3C6;">
-<nav style="text-align:center;color:white;font-size:30px;font-family：Ariel">
+<nav style="text-align:center;color:white;font-size:30px;font-family:Ariel">
 	<a href="file:///Users/linjueyan/Desktop/lis351Website/intro/introduction.html">Introduction</a>
 	<a href="file:///Users/linjueyan/Desktop/lis351Website/intro/introduction.html">Patisserie</a>
 	<a href="file:///Users/linjueyan/Desktop/lis351Website/ranking/ranking.html">Ranking</a>
 </nav>
 
 <header>
-<h1 style="background-color:#FFEEB0;font-size:50px;font-family:Ariel;color:FFA3C6;text-align: center">Yumeiro Patissiere</h1>
+<h1 style="background-color:#FFEEB0;font-size:50px;font-family:Ariel;color:#FFA3C6;text-align: center">Yumeiro Patissiere</h1>
 <h2 style="color:white;font-size:45px;font-family:Ariel;text-align: center"> A sweet world</h2>
 </header>
 <br>
@@ -28,10 +28,10 @@
 <p style="text-align:center;">
 	<br>
 	
-<img src="Natsumi Matsumoto.jpeg" alt="A Poster of Yumeiro Patisserie" width="836" height="470">
+<img src="NatsumiMatsumoto.jpeg" alt="A Poster of Yumeiro Patisserie" width="836" height="470">
 <BR>
 <cite>Image by Natsumi Matsumoto<cite>
-</p>
+	</p>
 
 	</body>
 
