--- a/home page.html
+++ b/home page.html
@@ -30,7 +30,7 @@
 	
 <img src="NatsumiMatsumoto.jpeg" alt="A Poster of Yumeiro Patisserie" width="836" height="470">
 <BR>
-<cite>Image by Natsumi Matsumoto<cite>
+<cite>Image by Natsumi Matsumoto</cite>
 	</p>
 
 	</body>
