--- a/patisserie.html
+++ b/patisserie.html
@@ -55,7 +55,7 @@
     <h2 style="background-color:#FFEEB0;font-size:40px;font-family:Ariel;color:#FFA3C6;margin: 15px;
     padding: 30px;text-align: center;">Inchigo Amano</h2>
 <br>
-<p style="text-align:center;"><img src="Ichigo Amano.jpeg" alt="A picture of Ichigo" width="451" height="479">
+<p style="text-align:center;"><img src="IchigoAmano.jpeg" alt="A picture of Ichigo" width="451" height="479">
 <cite> Image by Natsumi Matsumoto <cite>
 <br>
 </p>
@@ -63,21 +63,21 @@
     padding: 30px;text-align: center;">Makoto Kashino</h2>
 <br>
 <p style="text-align:center;">
-<img src="Makoto Kashino.jpeg" alt="A picture of Kashino" width="451" height="479" calss= "center">
+<img src="MakotoKashino.jpeg" alt="A picture of Kashino" width="451" height="479" calss= "center">
 <cite> Image by Natsumi Matsumoto <cite>
 </p>
 <br>
 <h2 style="background-color:#FFEEB0;font-size:40px;font-family:Ariel;color:#FFA3C6;margin: 15px;
     padding: 30px;text-align: center;">Satsuki Hanabusa</h2>
 <p style="text-align:center;">
-<img src="Satsuki Hanabusa.jpeg" alt="A picture of Hanabusa" width="451" height="479" class="center">
+<img src="SatsukiHanabusa.jpeg" alt="A picture of Hanabusa" width="451" height="479" class="center">
 <cite> Image by Natsumi Matsumoto <cite>
 </p>
 <br>
 <h2 style="background-color:#FFEEB0;font-size:40px;font-family:Ariel;color:#FFA3C6;margin: 15px;
     padding: 30px;text-align: center;">Sennosuke Andou</h2>
 <p style="text-align:center;">
-<img src="Sennosuke Andou .jpeg" alt="A picture of Andou" width="451" height="479"class="center">
+<img src="SennosukeAndou .jpeg" alt="A picture of Andou" width="451" height="479"class="center">
 <cite> Image by Natsumi Matsumoto <cite>
 </p>
 
