--- a/patisserie.html
+++ b/patisserie.html
@@ -13,6 +13,7 @@
 	<a href="file:///Users/linjueyan/Desktop/lis351Website/home%20page.html">Home page</a>
 	<a href="file:///Users/linjueyan/Desktop/lis351Website/intro/introduction.html">Introduction</a>
 	<a href="file:///Users/linjueyan/Desktop/lis351Website/ranking/ranking.html">Ranking</a>
+		</nav>
 <header>
 <h1 style="background-color:#FFEEB0;font-size:50px;font-family:Ariel;color:#FFA3C6;margin: 15px;
     padding: 30px;text-align: center;">Yumeiro Patissiere-Patissieres</h1>
@@ -46,7 +47,7 @@
         <label style="margin: 15px;
     padding: 30px;font-size:30px;font-family:Ariel"> Why you like she/him: <input type="text" name="Why you like she/him"> </label><br>
         <textarea style="margin: 35px;
-    padding: 90px"name="comments" rows="4">Enter your message</textarea><br>
+    padding: 90px" name="comments" rows="4">Enter your message</textarea><br>
         <input style="font-size: 50px;margin: 30px;" type="submit" value="Submit" /><br>
       </form>
 
@@ -54,31 +55,32 @@
 <p>
     <h2 style="background-color:#FFEEB0;font-size:40px;font-family:Ariel;color:#FFA3C6;margin: 15px;
     padding: 30px;text-align: center;">Inchigo Amano</h2>
+	</p>
 <br>
 <p style="text-align:center;"><img src="IchigoAmano.jpeg" alt="A picture of Ichigo" width="451" height="479">
-<cite> Image by Natsumi Matsumoto <cite>
+<cite> Image by Natsumi Matsumoto </cite>
 <br>
 </p>
 <h2 style="background-color:#FFEEB0;font-size:40px;font-family:Ariel;color:#FFA3C6;margin: 15px;
     padding: 30px;text-align: center;">Makoto Kashino</h2>
 <br>
 <p style="text-align:center;">
-<img src="MakotoKashino.jpeg" alt="A picture of Kashino" width="451" height="479" calss= "center">
-<cite> Image by Natsumi Matsumoto <cite>
+<img src="MakotoKashino.jpeg" alt="A picture of Kashino" width="451" height="479" class= "center">
+<cite> Image by Natsumi Matsumoto </cite>
 </p>
 <br>
 <h2 style="background-color:#FFEEB0;font-size:40px;font-family:Ariel;color:#FFA3C6;margin: 15px;
     padding: 30px;text-align: center;">Satsuki Hanabusa</h2>
 <p style="text-align:center;">
 <img src="SatsukiHanabusa.jpeg" alt="A picture of Hanabusa" width="451" height="479" class="center">
-<cite> Image by Natsumi Matsumoto <cite>
+<cite> Image by Natsumi Matsumoto </cite>
 </p>
 <br>
 <h2 style="background-color:#FFEEB0;font-size:40px;font-family:Ariel;color:#FFA3C6;margin: 15px;
     padding: 30px;text-align: center;">Sennosuke Andou</h2>
 <p style="text-align:center;">
-<img src="SennosukeAndou .jpeg" alt="A picture of Andou" width="451" height="479"class="center">
-<cite> Image by Natsumi Matsumoto <cite>
+<img src="SennosukeAndou .jpeg" alt="A picture of Andou" width="451" height="479" class="center">
+<cite> Image by Natsumi Matsumoto </cite>
 </p>
 
 <br>
