--- a/patisserie.html
+++ b/patisserie.html
@@ -41,15 +41,13 @@
 
 <p><a href="https://en.wikipedia.org/wiki/Yumeiro_Patissiere">Visit Wikipedia</a></p>
 
-<form text-align: center>
-        <label style="margin: 15px;
-    padding: 30px;font-size:30px;font-family:Ariel;">Your favorite patissiere: <input type="text" name="Your favorite patissiere"></label><br>
-        <label style="margin: 15px;
-    padding: 30px;font-size:30px;font-family:Ariel"> Why you like she/him: <input type="text" name="Why you like she/him"> </label><br>
-        <textarea style="margin: 35px;
-    padding: 90px" name="comments" rows="4">Enter your message</textarea><br>
-        <input style="font-size: 50px;margin: 30px;" type="submit" value="Submit" /><br>
-      </form>
+<form style="text-align: center;">
+  <label style="margin: 15px; padding: 30px; font-size: 30px; font-family: Arial;">Your favorite patissiere: <input type="text" name="Your favorite patissiere"></label><br>
+  <label style="margin: 15px; padding: 30px; font-size: 30px; font-family: Arial;">Why you like she/him: <input type="text" name="Why you like she/him"></label><br>
+  <textarea style="margin: 35px; padding: 90px;" name="comments" rows="4">Enter your message</textarea><br>
+  <input style="font-size: 50px; margin: 30px;" type="submit" value="Submit"><br>
+</form>
+
 
 
 <p>
