--- a/patisserie.html
+++ b/patisserie.html
@@ -39,14 +39,15 @@
 
 <h2 style="text-align:center; color:black;font-size:25px">All texts are cited from Wikipedia</h2>
 
-<p><a href="https://en.wikipedia.org/wiki/Yumeiro_Patissiere">Visit Wikipedia</a></p>
+<p style="text-align:center"><a href="https://en.wikipedia.org/wiki/Yumeiro_Patissiere">Visit Wikipedia</a></p>
 
 <form style="text-align: center;">
-  <label style="margin: 15px; padding: 30px; font-size: 30px; font-family: Arial;">Your favorite patissiere: <input type="text" name="Your favorite patissiere"></label><br>
-  <label style="margin: 15px; padding: 30px; font-size: 30px; font-family: Arial;">Why you like she/him: <input type="text" name="Why you like she/him"></label><br>
-  <textarea style="margin: 35px; padding: 90px;" name="comments" rows="4">Enter your message</textarea><br>
-  <input style="font-size: 50px; margin: 30px;" type="submit" value="Submit"><br>
+  <label style="display: block; margin: 15px auto; padding: 30px; font-size: 30px; font-family: Arial; text-align: center;">Your favorite patissiere: <input type="text" name="Your favorite patissiere"></label>
+  <label style="display: block; margin: 15px auto; padding: 30px; font-size: 30px; font-family: Arial; text-align: center;">Why you like she/him: <input type="text" name="Why you like she/him"></label>
+  <textarea style="display: block; margin: 35px auto; padding: 90px; text-align: center;" name="comments" rows="4">Enter your message</textarea><br>
+  <input style="display: block; margin: 30px auto; font-size: 50px;" type="submit" value="Submit"><br>
 </form>
+
 
 
 
