--- a/patisserie.html
+++ b/patisserie.html
@@ -39,7 +39,7 @@
 
 <h2 style="text-align:center; color:black;font-size:25px">All texts are cited from Wikipedia</h2>
 
-<p style="text-align:center"><a href="https://en.wikipedia.org/wiki/Yumeiro_Patissiere">Visit Wikipedia</a></p>
+<p style="text-align:center;"><a href="https://en.wikipedia.org/wiki/Yumeiro_Patissiere" style="display: block; margin: 0 auto;">Visit Wikipedia</a></p>
 
 <form style="text-align: center;">
   <label style="display: block; margin: 15px auto; padding: 30px; font-size: 30px; font-family: Arial; text-align: center;">Your favorite patissiere: <input type="text" name="Your favorite patissiere"></label>
@@ -78,7 +78,7 @@
 <h2 style="background-color:#FFEEB0;font-size:40px;font-family:Ariel;color:#FFA3C6;margin: 15px;
     padding: 30px;text-align: center;">Sennosuke Andou</h2>
 <p style="text-align:center;">
-<img src="SennosukeAndou .jpeg" alt="A picture of Andou" width="451" height="479" class="center">
+<img src="SennosukeAndou.jpeg" alt="A picture of Andou" width="451" height="479" class="center">
 <cite> Image by Natsumi Matsumoto </cite>
 </p>
 
