--- a/introduction.html
+++ b/introduction.html
@@ -8,8 +8,8 @@
 
 </head>
 <body style="background-color:#FFA3C6;">
-<img src="poster3.jpeg" alt="A yellow poster of Ichigo" >
-<br>
+	<img src="poster3.jpeg" alt="A yellow poster of Ichigo" width="400" align="top">
+	<br>
 <cite> Image by Natsumi Matsumoto<cite>
 	<header style="background-color:#FFEEB0;text-align:center;font-size:50px;font-family:Ariel;color:#FFA3C6;padding:30px;margin:0;">
 		<h1>Yumeiro Patissiere-Introduction</h1>
