--- a/introduction.html
+++ b/introduction.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-<head> 
+
 	<title>Introduction</title>
 
 	<!--- Information you don't want to display to users --> 
 
-</head>
+
 <body style="background-color:#FFA3C6;">
-	<img src="poster3.jpeg" alt="A yellow poster of Ichigo" width="400" align="top">
-	<br>
+  <div style="text-align: center;">
+    <img src="poster3.jpeg" alt="A yellow poster of Ichigo" style="max-width: 100%; height: auto;">
+  </div>
+  <br>
+  <cite> Image by Natsumi Matsumoto<cite>
 <cite> Image by Natsumi Matsumoto<cite>
 	<header style="background-color:#FFEEB0;text-align:center;font-size:50px;font-family:Ariel;color:#FFA3C6;padding:30px;margin:0;">
 		<h1>Yumeiro Patissiere-Introduction</h1>
