--- a/introduction.html
+++ b/introduction.html
@@ -12,8 +12,8 @@
   <img src="poster3.jpeg" alt="A yellow poster of Ichigo" style="max-width: 200%; height: auto;">
 </div>
   <br>
-  <cite> Image by Natsumi Matsumoto<cite>
-<cite> Image by Natsumi Matsumoto<cite>
+
+<cite style="text-align:center;"> Image by Natsumi Matsumoto</cite>
 	<header style="background-color:#FFEEB0;text-align:center;font-size:50px;font-family:Ariel;color:#FFA3C6;padding:30px;margin:0;">
 		<h1>Yumeiro Patissiere-Introduction</h1>
 	</header>
