--- a/introduction.html
+++ b/introduction.html
@@ -6,7 +6,7 @@
 
 	<!--- Information you don't want to display to users --> 
 
-
+<p>
 <body style="background-color:#FFA3C6;">
  <div style="text-align: center;">
   <img src="poster3.jpeg" alt="A yellow poster of Ichigo" style="max-width: 200%; height: auto;">
@@ -14,6 +14,7 @@
   <br>
 
 <cite style="text-align:center;"> Image by Natsumi Matsumoto</cite>
+	</p>
 	<header style="background-color:#FFEEB0;text-align:center;font-size:50px;font-family:Ariel;color:#FFA3C6;padding:30px;margin:0;">
 		<h1>Yumeiro Patissiere-Introduction</h1>
 	</header>
@@ -33,7 +34,7 @@
 
 	<p><i>Yumeiro Pâtissière Professional: Two years after studying in Paris, the sixteen-year-old Ichigo now returns to Japan as a professional pâtissière. As soon as she returns, Ichigo finds Team Ichigo breaking up. The Sweets Princes, Hanabusa and Andou, take long absences from school to work for their dreams, leaving only Ichigo and Kashino. Kashino skipped a grade due to having top grades back at Paris. Soon a "new" Team
 
-		<cite> Cited from Wikipedia <cite>
+		<cite> Cited from Wikipedia </cite>
 <a href="https://en.wikipedia.org/wiki/Yumeiro_Patissiere">Wikipedia</a>
 </i></p>
 
