--- a/introduction.html
+++ b/introduction.html
@@ -35,12 +35,13 @@
 	<p><i>Yumeiro Pâtissière Professional: Two years after studying in Paris, the sixteen-year-old Ichigo now returns to Japan as a professional pâtissière. As soon as she returns, Ichigo finds Team Ichigo breaking up. The Sweets Princes, Hanabusa and Andou, take long absences from school to work for their dreams, leaving only Ichigo and Kashino. Kashino skipped a grade due to having top grades back at Paris. Soon a "new" Team
 
 		<cite> Cited from Wikipedia </cite>
-<a href="https://en.wikipedia.org/wiki/Yumeiro_Patissiere">Wikipedia</a>
-</i></p>
 
+</i></p>
+<a href="https://en.wikipedia.org/wiki/Yumeiro_Patissiere">Wikipedia</a>
 <br>
 
 <br>
 <h2 style="font-size:50px;font-family:Ariel;color:#FFEEB0;">Yumeiro Patissiere Opening 1</h2>
 <iframe width="800" height="600" src="https://www.youtube.com/embed/kycPLw1IoSw"></iframe>
+	</main>
 	</body>
