--- a/introduction.html
+++ b/introduction.html
@@ -6,15 +6,15 @@
 
 	<!--- Information you don't want to display to users --> 
 
-<p>
+
 <body style="background-color:#FFA3C6;">
  <div style="text-align: center;">
   <img src="poster3.jpeg" alt="A yellow poster of Ichigo" style="max-width: 200%; height: auto;">
 </div>
   <br>
 
-<cite style="text-align:center;"> Image by Natsumi Matsumoto</cite>
-	</p>
+<h3"text-align:center;"> Image by Natsumi Matsumoto</h3>
+
 	<header style="background-color:#FFEEB0;text-align:center;font-size:50px;font-family:Ariel;color:#FFA3C6;padding:30px;margin:0;">
 		<h1>Yumeiro Patissiere-Introduction</h1>
 	</header>
