--- a/introduction.html
+++ b/introduction.html
@@ -13,7 +13,7 @@
 </div>
   <br>
 
-<h3"text-align:center;"> Image by Natsumi Matsumoto</h3>
+<h3 style="text-align:center;"> Image by Natsumi Matsumoto</h3>
 
 	<header style="background-color:#FFEEB0;text-align:center;font-size:50px;font-family:Ariel;color:#FFA3C6;padding:30px;margin:0;">
 		<h1>Yumeiro Patissiere-Introduction</h1>
