--- a/home page.html
+++ b/home page.html
@@ -10,9 +10,9 @@
 
 	<body style="background-color:#FFA3C6;">
 <nav style="text-align:center;color:white;font-size:30px;font-family:Ariel">
-	<a href="file:///Users/linjueyan/Desktop/lis351Website/intro/introduction.html">Introduction</a>
-	<a href="file:///Users/linjueyan/Desktop/lis351Website/intro/introduction.html">Patisserie</a>
-	<a href="file:///Users/linjueyan/Desktop/lis351Website/ranking/ranking.html">Ranking</a>
+	<a href="https://jueyanlin.github.io/introduction.html">Introduction</a>
+	<a href="https://jueyanlin.github.io/patisserie.html">Patisserie</a>
+	<a href="https://jueyanlin.github.io/ranking.html">Ranking</a>
 </nav>
 
 <header>
