--- a/ranking.html
+++ b/ranking.html
@@ -11,7 +11,7 @@
 <nav style="text-align:center;color:white;font-size:45px;font-family:Ariel">
 	<a href="https://jueyanlin.github.io/introduction.html">Introduction</a>
 	<a href="https://jueyanlin.github.io/patisserie.html">Patisserie</a>
-	<a href="https://jueyanlin.github.io/home%20page.html"Homepage</a>
+	<a href="https://jueyanlin.github.io/home%20page.html">Homepage</a>
 	</nav>
 <h1 style="background-color:#FFEEB0;font-size:50px;font-family:Ariel;color:#FFA3C6;text-align: center">Yumeiro Patissiere-ranking</h1>
 <body>
