--- a/introduction.html
+++ b/introduction.html
@@ -18,9 +18,9 @@
 	</header>
 
 <nav style="text-align:center;color:white;font-size:30px;font-family:Ariel;background-color:#FFEEB0;">
-	<a href="https://jueyanlin.github.io/home%20page.html" style="text-decoration:none;color:#FFA3C6;">Homepage</a>
+	<a href="https://jueyanlin.github.io/home%20page.html" style="text-decoration:none;color:#FFA3C6;">Home page</a>
 	<a href="https://jueyanlin.github.io/patisserie.html" style="text-decoration:none;color:#FFA3C6;">Patisserie</a>
-	<a href="https://jueyanlin.github.io/ranking.html" style="text-decoration:none;color:#FFA3C6;">ranking</a>
+	<a href="https://jueyanlin.github.io/ranking.html" style="text-decoration:none;color:#FFA3C6;">Ranking</a>
 </nav>
 
 <main style="background-color:WHITE;font-family:Ariel;color:black;font-size:20px;padding:30px;margin:0;">
