--- a/patisserie.html
+++ b/patisserie.html
@@ -10,9 +10,9 @@
 
 	<body style="background-color:#FFA3C6;">
 <nav style="text-align:center;color:white;font-size:45px;font-family:Ariel">
-	<a href="file:///Users/linjueyan/Desktop/lis351Website/home%20page.html">Home page</a>
-	<a href="file:///Users/linjueyan/Desktop/lis351Website/intro/introduction.html">Introduction</a>
-	<a href="file:///Users/linjueyan/Desktop/lis351Website/ranking/ranking.html">Ranking</a>
+	<a href="https://jueyanlin.github.io/home%20page.html">Home page</a>
+	<a href="https://jueyanlin.github.io/introduction.html">Introduction</a>
+	<a href="https://jueyanlin.github.io/ranking.html">Ranking</a>
 		</nav>
 <header>
 <h1 style="background-color:#FFEEB0;font-size:50px;font-family:Ariel;color:#FFA3C6;margin: 15px;
