--- a/home page.html
+++ b/home page.html
@@ -1,38 +1,32 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-
-<title>Home Page</title>
-
-	<!--- Information you don't want to display to users --> 
-
-
-
-	<body style="background-color:#FFA3C6;">
-<nav style="text-align:center;color:white;font-size:30px;font-family:Ariel">
-	<a href="https://jueyanlin.github.io/introduction.html">Introduction</a>
-	<a href="https://jueyanlin.github.io/patisserie.html">Patisserie</a>
-	<a href="https://jueyanlin.github.io/ranking.html">Ranking</a>
-</nav>
-
-<header>
-<h1 style="background-color:#FFEEB0;font-size:50px;font-family:Ariel;color:#FFA3C6;text-align: center">Yumeiro Patissiere</h1>
-<h2 style="color:white;font-size:45px;font-family:Ariel;text-align: center"> A sweet world</h2>
-</header>
-<br>
-<p style="color:white; font-family:Ariel;text-align: center"><i>This is a website about the Japanese anime Yumeiro Patissiere.<br>
- I created this site out of my love for this manga.
- <br> This anime that I watched as a child brought back many fond memories of baking and the healing power of cake.
- <br>
-  I hope that more people can feel the beauty and happiness that desserts bring.</i></p>
-<p style="text-align:center;">
+<head>
+	<meta charset="UTF-8">
+	<title>Home Page</title>
+	<link rel="stylesheet" href="homepagestyle.css">
+</head>
+<body style="background-color:#FFA3C6;">
+	<nav>
+		<a href="https://jueyanlin.github.io/introduction.html">Introduction</a>
+		<a href="https://jueyanlin.github.io/patisserie.html">Patisserie</a>
+		<a href="https://jueyanlin.github.io/ranking.html">Ranking</a>
+	</nav>
+	<header>
+		<h1>Yumeiro Patissiere</h1>
+		<h2>A sweet world</h2>
+	</header>
 	<br>
-	
-<img src="NatsumiMatsumoto.jpeg" alt="A Poster of Yumeiro Patisserie" width="836" height="470">
-<BR>
-<cite>Image by Natsumi Matsumoto</cite>
+	<p><i>This is a website about the Japanese anime Yumeiro Patissiere.<br>
+	I created this site out of my love for this manga.
+	<br> This anime that I watched as a child brought back many fond memories of baking and the healing power of cake.
+	<br>
+	I hope that more people can feel the beauty and happiness that desserts bring.</i></p>
+	<p>
+		<br>
+		<img src="NatsumiMatsumoto.jpeg" alt="A Poster of Yumeiro Patisserie" width="836" height="470">
+		<BR>
+		<cite>Image by Natsumi Matsumoto</cite>
 	</p>
-
-	</body>
-
+</body>
 </html>
