--- a/introduction.html
+++ b/introduction.html
@@ -1,29 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
-
 	<title>Introduction</title>
+	<link rel="stylesheet" type="text/css" href="introductionstyle.css">
+<body>
+	<div>
+		<img src="poster3.jpeg" alt="A yellow poster of Ichigo">
+	</div>
+	<h3>Image by Natsumi Matsumoto</h3>
+	<header>
+	<h1>Yumeiro Patissiere-Introduction</h1>
+</header>
 
-	<!--- Information you don't want to display to users --> 
-
-
-<body style="background-color:#FFA3C6;">
- <div style="text-align: center;">
-  <img src="poster3.jpeg" alt="A yellow poster of Ichigo" style="max-width: 200%; height: auto;">
-</div>
-<h3 style="text-align:center;"> Image by Natsumi Matsumoto</h3>
-
-	<header style="background-color:#FFEEB0;text-align:center;font-size:50px;font-family:Ariel;color:#FFA3C6;padding:30px;margin:0;">
-		<h1>Yumeiro Patissiere-Introduction</h1>
-	</header>
-
-<nav style="text-align:center;color:white;font-size:30px;font-family:Ariel;background-color:#FFEEB0;">
-	<a href="https://jueyanlin.github.io/home%20page.html" style="text-decoration:none;color:#FFA3C6;">Home page</a>
-	<a href="https://jueyanlin.github.io/patisserie.html" style="text-decoration:none;color:#FFA3C6;">Patisserie</a>
-	<a href="https://jueyanlin.github.io/ranking.html" style="text-decoration:none;color:#FFA3C6;">Ranking</a>
+<nav>
+	<a href="https://jueyanlin.github.io/home%20page.html">Home page</a>
+	<a href="https://jueyanlin.github.io/patisserie.html">Patisserie</a>
+	<a href="https://jueyanlin.github.io/ranking.html">Ranking</a>
 </nav>
 
-<main style="background-color:WHITE;font-family:Ariel;color:black;font-size:20px;padding:30px;margin:0;">
+<main>
 	<p><i>Yumeiro Patissiere is a shōjo manga and anime series by Natsumi Matsumoto. It began serialization on September 3, 2008, in the October 2008 issue of Ribon.[2] The series ended on June 3, 2011, with a total of 12 tankōbon volumes.[3] The manga won the 56th Shogakukan Manga Awards in the Children's category.[4]</i></p>
 
 	<p><i>The series was adapted into two anime television series by Pierrot and Studio Hibari.[5] The series was licensed by Crunchyroll for online streaming with English subtitles.[6] The anime has since been licensed by Maiden Japan.[7]</i></p>
@@ -31,15 +26,12 @@
 	<p><i>Yumeiro Pâtissière: Fourteen-year-old Ichigo Amano (her name means strawberry) is clumsy and doesn't have any talent except for eating sweets (specifically cakes). When she stumbles upon a Sweets Festival, she meets Henri-sensei who acknowledges her ability of taste and invites her to transfer to St. Marie Academy to become a pâtissière. Ichigo has trouble adjusting initially, but with the help of the 3 Sweets Princes (Makoto Kashino, Satsuki Hanabusa, and Sennosuke Andou) and the Sweets Spirits (Vanilla, Chocolat, Caramel, and Cafe), she gains the confidence and skill to work towards becoming a pâtissière. Throughout the entire anime is Ichigo and the Sweet Princes trying to win the Grand Prix, which allowed them to go to Paris. Throughout the competition, Ichigo has a lot of character change and she grows little by little. She realizes many things and her skills are improving rapidly.</i></p>
 
 	<p><i>Yumeiro Pâtissière Professional: Two years after studying in Paris, the sixteen-year-old Ichigo now returns to Japan as a professional pâtissière. As soon as she returns, Ichigo finds Team Ichigo breaking up. The Sweets Princes, Hanabusa and Andou, take long absences from school to work for their dreams, leaving only Ichigo and Kashino. Kashino skipped a grade due to having top grades back at Paris. Soon a "new" Team
+	</i></p>
+	<cite> Cited from Wikipedia </cite>
 
-		<cite> Cited from Wikipedia </cite>
+	<a href="https://en.wikipedia.org/wiki/Yumeiro_Patissiere">Wikipedia</a>
 
-</i></p>
-<a href="https://en.wikipedia.org/wiki/Yumeiro_Patissiere">Wikipedia</a>
-<br>
+	<h2>Yumeiro Patissiere Opening 1</h2>
+	<iframe src="https://www.youtube.com/embed/kycPLw1IoSw"></iframe>
+</main>
 
-<br>
-<h2 style="font-size:50px;font-family:Ariel;color:#FFEEB0;">Yumeiro Patissiere Opening 1</h2>
-<iframe width="800" height="600" src="https://www.youtube.com/embed/kycPLw1IoSw"></iframe>
-	</main>
-	</body>
