--- a/ranking.html
+++ b/ranking.html
@@ -1,38 +1,62 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-
-<title>Ranking</title>
-
-	<!--- Information you don't want to display to users --> 
-
-<body style="background-color:#FFA3C6;">
-<nav style="text-align:center;color:white;font-size:45px;font-family:Ariel">
-	<a href="https://jueyanlin.github.io/introduction.html">Introduction</a>
-	<a href="https://jueyanlin.github.io/patisserie.html">Patisserie</a>
-	<a href="https://jueyanlin.github.io/home%20page.html">Homepage</a>
+<head>
+	<meta charset="UTF-8">
+	<title>Ranking</title>
+	<link rel="stylesheet" type="text/css" href="rankingstyle.css">
+</head>
+<body>
+	<nav>
+		<a href="https://jueyanlin.github.io/introduction.html">Introduction</a>
+		<a href="https://jueyanlin.github.io/patisserie.html">Patisserie</a>
+		<a href="https://jueyanlin.github.io/home%20page.html">Homepage</a>
 	</nav>
-<h1 style="background-color:#FFEEB0;font-size:50px;font-family:Ariel;color:#FFA3C6;text-align: center">Yumeiro Patissiere-ranking</h1>
-
-	<h2 style="color:white;font-size:45px;font-family:Ariel;text-align: center">Ranking List of my favorite desserts in season 1</h2>
-	<ul style="color:white;font-size:30px;font-family:Ariel;text-align: center">
+	<h1>Yumeiro Patissiere-ranking</h1>
+	<h2>Ranking List of my favorite desserts in season 1</h2>
+	<ul>
 		<li>
 			5. Wabi-sabi Matcha Chocolate 
 			<br>
-			<img src="5.png" alt="Wabi-sabi Matcha Chocolate" width="990" height="560">
+			<img src="5.png" alt="Wabi-sabi Matcha Chocolate">
 			<br>
 			<cite>Image by Natsumi Matsumoto, from Bilibili</cite>
 		</li>
-		
+			<li>
+		4. Tropical Fruit Lasagna
+		<br>
+		<img src="4.png" alt="Tropical Fruit Lasagna">
+		<br>
+		<cite>Image by Natsumi Matsumoto, from Bilibili</cite>
+	</li>
 	
-		<li>
-			4. Tropical Fruit Lasagna
-				<br>
-			<img src="4.png" alt="Tropical Fruit Lasagna" width="990" height="560">
-			<br>
-			<cite>Image by Natsumi Matsumoto, from Bilibili</cite>
-		</li>
-		
+	<li>
+		3. Sugar Sculpture Theme Dessert
+		<br>
+		<img src="3.png" alt="Sugar Sculpture Theme Dessert">
+		<br>
+		<cite>Image by Natsumi Matsumoto, from Bilibili</cite>
+	</li>
+			
+	<li>
+		2. Make a friend birthday cake
+		<br>
+		<img src="2.png" alt="Make a friend birthday cake">
+		<br>
+		<cite>Image by Natsumi Matsumoto, from Bilibili</cite>
+	</li>
+
+	<li>
+		1. Heart of Love
+		<br>
+		<img src="1.png" alt="Heart of Love">
+		<br>
+		<cite>Image by Natsumi Matsumoto, from Bilibili</cite>
+	</li>
+</ul>
+</body>
+</html>
+
 	
 	
 		<li>
