--- a/ranking.html
+++ b/ranking.html
@@ -17,14 +17,14 @@
 		<li>
 			5. Wabi-sabi Matcha Chocolate 
 			<br>
-			<img src="5.png" alt="Wabi-sabi Matcha Chocolate">
+			<img src="5.png" alt="Wabi-sabi Matcha Chocolate" width="990" height="560">
 			<br>
 			<cite>Image by Natsumi Matsumoto, from Bilibili</cite>
 		</li>
 		<li>
 			4. Tropical Fruit Lasagna
 			<br>
-			<img src="4.png" alt="Tropical Fruit Lasagna">
+			<img src="4.png" alt="Tropical Fruit Lasagna" width="990" height="560">
 			<br>
 			<cite>Image by Natsumi Matsumoto, from Bilibili</cite>
 		</li>
